Make the check code a module as well